Test Org - Speridian/src/objects/Pause_Task__c.object
<CustomObject>
    <fields>
        <fullName>Ba_Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chapter_Component__c</fullName>
        <label>Chapter Component</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_number__c</fullName>
        <label>Sequence number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stored_Value__c</fullName>
        <label>Stored Value</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stored_data__c</fullName>
        <label>Stored data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Task_Chapter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Chapter</label>
        <referenceTo>BA_Task_Chapter__c</referenceTo>
        <relationshipLabel>Pause Tasks</relationshipLabel>
        <relationshipName>Pause_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pause Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pause Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pause Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>